# acts-evaluatorias-ingII

./: README.md
act-01/: CMakeLists.txt
act-02/: CMakeLists.txt  main.cpp
act-02/my_library/: CMakeLists.txt  my_library.cpp
act-03/: CMakeLists.txt
act-04/: CMakeLists.txt  main.cpp
